[package]
name = "tokio-tungstenite-typed"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>", "Vero <veronoicc@proton.me>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "tokio-tungstenite with type safe messages"
edition = "2018"
homepage = "https://github.com/veronoicc/tokio-tungstenite-typed"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veronoicc/tokio-tungstenite-typed"

[features]
default = ["json"]
json = ["serde_json"]
msgpack = ["rmp-serde"]

native-tls = ["tokio-tungstenite/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
tokio-tungstenite = { version = "0.21" }
tokio = { version = "1", features = ["net"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
serde = "1.0"
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["net"] }
tokio-tungstenite = { version = "0.21" }
